<resources>
    <string name="app_name">OCA Prep</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="new_test">New</string>
    <string name="test">Test</string>


    <!-- Shared Preferences -->
    <string name="sp_test_num_key">testNum</string>
    <string name="sp_test_num_default">000</string>
    <string name="sp_resume_test">resumeTest</string>
    <string name="sp_resume_practice_test">resumePractice</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sp_show_swipe_test_review">swipe</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="study_mode">Study Mode</string>
    <string name="timer">Timer</string>
    <string name="difficulty">Difficulty</string>
    <string name="question_history">Q History</string>
    <string name="questions">Questions</string>
    <string name="test2">TEST</string>
    <string name="practice_test">Practice\nTest</string>
    <string name="train">Train</string>
    <string name="stats">Stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume_test">Resume</string>
    <string name="of">of</string>
    <string name="previous_q">PREV</string>
    <string name="submit">Submit</string>
    <string name="next">NEXT</string>
    <string name="time_expired">Time Expired!</string>
    <string name="results">Results</string>
    <string name="got_it">GOT IT!</string>
    <string name="swipe_up_n_nto_return_to_n_ntest_review">Swipe up\n\nto return to\n\ntest review</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mix_it_up">Mix it up!</string>
    <string name="does_it_compile">Does it compile?</string>
    <string name="terms">Terms</string>
    <string name="theory">Theory</string>
    <string name="select_objectives">Select objectives...</string>
</resources>
