<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/home_activity"
    android:theme="@style/NintendoFont"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/train_button"
        android:layout_width="192dp"
        android:layout_height="166dp"
        android:background="@color/colorPrimaryVeryLight"
        android:text="@string/train"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stats_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/score_bg"
        android:layout_width="195dp"
        android:layout_height="162dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/test2"
        app:layout_constraintBottom_toTopOf="@+id/train_button"
        app:layout_constraintEnd_toStartOf="@+id/title_background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/title_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryLittleLight"
        android:text="@string/practice_test"
        app:layout_constraintBottom_toBottomOf="@+id/score_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/score_bg"
        app:layout_constraintTop_toTopOf="@+id/score_bg" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryLight"
        android:text="Progress"
        app:layout_constraintBottom_toBottomOf="@+id/train_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/train_button"
        app:layout_constraintTop_toTopOf="@+id/train_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/space_background"
        android:gravity="center"
        android:text="OCA PREP"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/score_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/robot_image"
        android:layout_width="82dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_robot"
        android:layout_marginLeft="16dp" />
</android.support.constraint.ConstraintLayout>